# artifact-registry-proxy

./: .dockerignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
.github/workflows/: publish.yaml
src/: auth.rs  err.rs  main.rs  resource_access.rs  routes.rs
src/gcp/: gcp_creds.rs  gcp_resource_access.rs  mod.rs
