[package]
name = "gcr-artifact-registry-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket =  {  version = "0.5.1", features = ["json", "serde_json"] }
tokio = "1.38.0"
serde_json = "1.0.117"
reqwest = { version = "0.12.5", features = ["blocking", "json", "stream"] }
base64 = "0.22.1"
futures-core = "0.3.30"
chrono = "0.4.38"
bytes = "1.6.0"
log = "0.4.21"
fern = "0.6.2"
serde = { version = "1.0.203", features = ["derive"] }
tempfile = "3.10.1"
dotenv = "0.15.0"